Revert "Merge branch 'master' into json-clone-valfunc"
This reverts commit 56f3bf17e216531a2ac574b4a466b0c770db8107, reversing
changes made to f4304650231d535845631748335bd9c4242b4608.